--- a/docs/milp-approach.org
+++ b/docs/milp-approach.org
@@ -4,68 +4,9 @@
 #+LANGUAGE: en
 
 # =========================================================================================================================
-# Org LaTeX options
-#+OPTIONS: tex:t
-#+OPTIONS: ':t
-#+STARTUP: latexpreview
+# Preamble
 
-# =========================================================================================================================
-# LaTeX packages
-#+LATEX_CLASS: article
-#+latex_header: \usepackage{lipsum}                         % Dummy filler text
-#+latex_header: \usepackage{amsfonts}                       % Cool math fonts
-#+latex_header: \usepackage{multicol}                       % Add capability to make columns
-#+latex_header: \setlength\parindent{0pt}                   % No indent for paragraphs
-
-# =========================================================================================================================
-# `autoref' formatting
-#+latex_header: \renewcommand*{\sectionautorefname}{Section}
-#+latex_header: \renewcommand*{\subsectionautorefname}{Subsection}
-#+latex_header: \renewcommand*{\subsubsectionautorefname}{Subsubsection}
-#+latex_header: \renewcommand*{\paragraphautorefname}{Paragraph}
-
-# =========================================================================================================================
-# Custom `Algoritm2e' commands
-#+latex_header: \newcommand{\Or}{\textbf{ or }}
-#+latex_header: \renewcommand*{\And}{\textbf{ and }}
-
-# =========================================================================================================================
-# Custom commands
-#+latex_header: \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{gray}{#1}}
-
-#+latex_header: \newcommand{\T}{\mathcal{T}}                % To make it clear the difference
-#+latex_header: \newcommand{\Tau}{T}                        % between Tau and T
-#+latex_header: \newcommand{\AC}{AC(u, d, v, \eta)}         % Set the parameters for AC once
-#+latex_header: \newcommand{\PC}{PC(u, d, v)}               % Set the parameters for PC once
-#+latex_header: \newcommand{\ACi}{AC(u_i, d_i, v_i, \eta_i)}% Set the parameters for AC once
-#+latex_header: \newcommand{\PCi}{PC(u_i, d_i, v_i)}        % Set the parameters for PC once
-#+latex_header: \newcommand{\Not}{\textbf{not }}            % Custom `not' operator
-#+latex_header: \newcommand{\visit}{(b_i, a_i, e_i, u_i, d_i, v_i, \eta_i, \xi_i)}
-#+latex_haeder:                                             % Single visit tuple
-#+latex_header: \newcommand{\I}{\mathbb{I}}                 % Set of visit tuples
-#+latex_header: \newcommand{\C}{\mathbb{C}}                 % Charger availability information
-#+latex_header: \newcommand{\U}{\mathcal{U}}                % Uniform distribution
-#+latex_header: \newcommand{\Sol}{\mathbb{S}}               % A shorthand for visit tuple
-#+latex_header: \newcommand{\M}{\mathbb{M}}                 % A shorthand for the metadata
-#+latex_header: \newcommand{\Hd}{\mathbb{H}}                % Set of discrete times
-#+latex_header: \newcommand{\Nu}{\mathcal{V}}               % Draw a nice Nu
-
-#+latex_header: \newcommand{\Iset}{\mathcal{I}}             % Set of visits 1-I
-#+latex_header: \newcommand{\Isetinit}{\mathcal{I}_0}       % Set of visits inital visits
-#+latex_header: \newcommand{\Isetfinal}{\mathcal{I}_f}      % Set of visits final visits
-#+latex_header: \newcommand{\Bset}{\mathcal{B}}             % Set of visits 1-B
-#+latex_header: \newcommand{\Qset}{\mathcal{Q}}             % Set of visits 1-Q
-#+latex_header: \newcommand{\Jset}{\mathcal{J}}             % Set of visits 1-J
-#+latex_header: \newcommand{\Jsetq}{\mathbb{J}}             % Set of visits 1-J for queue active times
-#+latex_header: \newcommand{\Hset}{\mathcal{H}}             % Set of visits 1-H
-
-# =========================================================================================================================
-# More document configuration
-#+begin_export latex
-\parskip 3mm                                % Set the vetical space between paragraphs
-\let\ref\autoref                            % Redifine `\ref` as `\autoref` because lazy
-\SetCommentSty{mycommfont}                  % Set the comment color
-#+end_export
+#+include: preamble.org
 
 # =========================================================================================================================
 # Document
@@ -92,34 +33,34 @@ and total cost of using the BEBs.
 :CUSTOM_ID: sec:problem-description
 :END:
 It is assumed that there are a total of $I$ visits to the station by $B$ buses. There are a total of $Q$ queues for the
-bus at the station. Given a set of bus arrivals to a charging station $i \in \{1,..., I\} = \Iset \subset \mathcal{Z}$
-with a set of chargers to be queued $q \in \{1,..., Q\} = \Qset \subset \mathcal{Z}$ where the bus is indicated by an
-identification number $b \in \{1,..., B\} = \Bset \subset \mathcal{Z}$. Each bus arrival, $i$, can be represented by the
-tuple: $\visit$, in which the ordered elements denote the bus identification number, $b_i$, arrival time to the station,
-$a_i$, departure time from the station, $e_i$, time to start charging, $u_i$, time to stop charging, $d_i$, the charger
-queue for the bus to be placed into, $v_i$, and the initial State Of Charge (SOC), $\eta_i$.
+bus at the station. Given a set of bus arrivals to a charging station $i \in \{1,..., I\} = \Iset \subset \mathcal{Z}$ with a set of
+chargers to be queued $q \in \{1,..., Q\} = \Qset \subset \mathcal{Z}$ where the bus is indicated by an identification number $b \in
+\{1,..., B\} = \Bset \subset \mathcal{Z}$. Each bus arrival, $i$, can be represented by the tuple: $\visit$, in which the ordered
+elements denote the bus identification number, $b_i$, arrival time to the station, $a_i$, departure time from the
+station, $e_i$, time to start charging, $u_i$, time to stop charging, $d_i$, the charger queue for the bus to be placed
+into, $v_i$, and the initial State Of Charge (SOC), $\eta_i$.
 
 It is assumed that each visit occurs over the time horizon $T = \{ t : t_0 \le t \le t_f \}$. The set of all arrivals is
-represented by the set $\I = \{\forall i \in \Iset \; \visit: b_i, \xi_i \in \Bset, a_i, e_i, u_i, d_i \in T, v_i \in
-\Qset \}$. The concept of "arrivals" is derived from the PAP \cite{Qarebagh2019}. This idea of arrivals is useful in the
-sense that it is easy to describe the state of any arbitrary arrival; however, although a bus may revisit the station
-multiple times, the model assumes that each arrival is unique (i.e. no two bus arrives twice) therefore a system must be
-put in place to track each bus over each arrival. That is why a bus identifier is placed in the tuple, and in that way
-each bus can be tracked over each arrival.
+represented by the set $\I = \{\forall i \in \Iset \; \visit: b_i, \xi_i \in \Bset, a_i, e_i, u_i, d_i \in T, v_i \in \Qset \}$. The
+concept of "arrivals" is derived from the PAP \cite{Qarebagh2019}. This idea of arrivals is useful in the sense that it
+is easy to describe the state of any arbitrary arrival; however, although a bus may revisit the station multiple times,
+the model assumes that each arrival is unique (i.e. no two bus arrives twice) therefore a system must be put in place to
+track each bus over each arrival. That is why a bus identifier is placed in the tuple, and in that way each bus can be
+tracked over each arrival.
 
-For each arrival a bus must be placed in a singular queue, $v_i \in \Qset$. The charger $q$ is assumed to be either a
-fast or slow charger or no charger at all. A bus is only allowed to visit one queue per visit; however, there may be
-multiple buses charging simultaneously. The amount of time the bus is allowed to charge is dictated by the scheduled
-arrival time and required departure time, $[a_i, e_i]$. Although a bus must be placed in a queue, if a bus does not
-require much charge, or none at all, partial charges, or no charging, is allowed. It is not allowed for the bus to
-charge over its battery capacity limit. The battery charging rate is modeled as linear, which remains accurate up to
-about an SOC of 80% charge \cite{Li2016}.
+For each arrival a bus must be placed in a singular queue, $v_i \in \Qset$. The charger $q$ is assumed to be either a fast
+or slow charger or no charger at all. A bus is only allowed to visit one queue per visit; however, there may be multiple
+buses charging simultaneously. The amount of time the bus is allowed to charge is dictated by the scheduled arrival time
+and required departure time, $[a_i, e_i]$. Although a bus must be placed in a queue, if a bus does not require much
+charge, or none at all, partial charges, or no charging, is allowed. It is not allowed for the bus to charge over its
+battery capacity limit. The battery charging rate is modeled as linear, which remains accurate up to about an SOC of 80%
+charge \cite{Li2016}.
 
 Each bus arrival, with the exception of the last arrival for each bus, has a paired "route" that the bus must perform.
 This route, as one would expect, causes the bus to discharge by some certain amount. This paper assumes an average
-discharge over a period of time where an estimated discharge is calculated for each route, $\Delta_i$. The charge
-supplied while at the station is required to supply enough charge for each route (battery charge does not deplete to
-zero) with an additional battery capacity percentage, $m$, acting as a safety factor.
+discharge over a period of time where an estimated discharge is calculated for each route, $\Delta_i$. The charge supplied
+while at the station is required to supply enough charge for each route (battery charge does not deplete to zero) with
+an additional battery capacity percentage, $m$, acting as a safety factor.
 
 The scheduler's task shall be to schedule the set of arrivals $\I$ to fulfill the minimum charge requirements over the
 time horizon $T$ as well as minimize the demand cost as well as minimize over the consumption cost. The objective
@@ -346,11 +287,11 @@ p_d(t) = \text{max}(p_{fix},p_{max}(t))s_r
 #+end_export
 
 [[eq:pdem]], again, retains the largest $p_{dem}$ value with a starting fixed value of $p_{fix}$. To write the total power
-demand at any discrete time, consider [[eq:discrete-power]]. Let $\omega_h \in \omega$ be the discrete power demand at time
-step $h$ where $h \in \{ 1, 2, ..., H \} \subset \mathcal{Z}$ and $H = \frac{T}{900}$. For conciseness of notation we
-will abuse $t_h$ to denote the time in discrete form (as opposed to $t$ being continuous), let $dt_h = t_h - t_{h-1}$,
-and $\Hset = \{ 1, 2, ..., H \}$. Let $\iota_h$ be a binary decision variable that is enabled if charger $v_i \in \Qset$
-is enabled in the time frame $dt_h$. Let the power usage of charger $v_i$ be denoted as $r_{v_i}$.
+demand at any discrete time, consider [[eq:discrete-power]]. Let $\omega_h \in \omega$ be the discrete power demand at time step $h$
+where $h \in \{ 1, 2, ..., H \} \subset \mathcal{Z}$ and $H = \frac{T}{900}$. For conciseness of notation we will abuse $t_h$ to denote
+the time in discrete form (as opposed to $t$ being continuous), let $dt_h = t_h - t_{h-1}$, and $\Hset = \{ 1, 2, ..., H
+\}$. Let $\iota_h$ be a binary decision variable that is enabled if charger $v_i \in \Qset$ is enabled in the time frame
+$dt_h$. Let the power usage of charger $v_i$ be denoted as $r_{v_i}$.
 
 #+name: eq:discrete-power
 #+begin_export latex
@@ -371,7 +312,7 @@ The average power can be rewritten as $p_{15}^h = \omega_h$, $p_d$ can be rewrit
 \end{equation}
 #+end_export
 
-To write the power cost, [[eq:consumption-cost]] and [[eq:pd-dis]] are superimposed to create [[eq:pc]].
+To write the power cost, [[eq:consumption-cost]] and [[eq:pd-dis]] are added together to create [[eq:pc]].
 
 #+name: eq:pc
 #+begin_export latex
@@ -542,20 +483,20 @@ availability, $\C$. The output of each generator affects the tuple of decision v
 **** Generator Input
 Each generator has the tuple input of ($i, \I, \C$) where $i$ is the visit index, $\I_i$ is the tuple $\visit$
 ([[#sec:problem-description]]), that describes the set of visits generated by the route generation algorithm
-([[#sec:route-gen]]), and $\C$ is the set that describes the availability for all chargers $q \in \Qset$. In other words,
-$\C$ defines the set of times when the chargers are not being utilized or are "inactive".
+([[#sec:route-gen]]), and $\C$ is the set that describes the availability for all chargers $q \in \Qset$. In other words, $\C$
+defines the set of times when the chargers are not being utilized or are "inactive".
 
 To derive $\C$, consider its inverse, $\C'$, which is the set of "active" time periods for each charger, $\C' = \bigcup
-\{\C_q' : q \in \mathcal{Q}\}$ where $\C_q' \subset \C'$ describes the active times for chagrer $q$. Focusing on an
-individual charger, consider $\C_q'$ before a schedule has been imposed upon it, $\C_q' \in \varnothing$. In other
-words, no buses have been assigned to be charged over the time period of $[u_i, d_i]$. After the scheduling process is
-complete, $\C_q'$ will have a set of active periods of the form $\C_q' \in \{[u_j, d_j]: j \in \Jsetq \}$ where $\Jsetq
-\subset \mathcal{I}$. For $\C_q'$ to be of value, its compliment is to be found, $\C_q$.
+\{\C_q' : q \in \mathcal{Q}\}$ where $\C_q' \subset \C'$ describes the active times for chagrer $q$. Focusing on an individual charger,
+consider $\C_q'$ before a schedule has been imposed upon it, $\C_q' \in \varnothing$. In other words, no buses have been
+assigned to be charged over the time period of $[u_i, d_i]$. After the scheduling process is complete, $\C_q'$ will have
+a set of active periods of the form $\C_q' \in \{[u_j, d_j]: j \in \Jsetq \}$ where $\Jsetq \subset \mathcal{I}$. For $\C_q'$ to be of
+value, its compliment is to be found, $\C_q$.
 
-To determine the inverse of $\C_q'$, begin by noting $\C_q' \bigcap \{[u_j, d_j] : j \in \Jsetq\} = \varnothing$, is
-said to be disjoint \cite{NaiveHalmos}. The inverse of a disjoint set can be found by the De Morgan Law as shown in
-[[eq:demorgan]]. Using [[eq:demorgan]], the set of inactive periods can be written as $\C_q \equiv \bigcup \{[u_j, d_j]': j \in
-\Jsetq\}$. Let $\Sol$ denote the tuple $\Sol \equiv (i, \I, \C)$.
+To determine the inverse of $\C_q'$, begin by noting $\C_q' \bigcap \{[u_j, d_j] : j \in \Jsetq\} = \varnothing$, is said to be
+disjoint \cite{NaiveHalmos}. The inverse of a disjoint set can be found by the De Morgan Law as shown in [[eq:demorgan]].
+Using [[eq:demorgan]], the set of inactive periods can be written as $\C_q \equiv \bigcup \{[u_j, d_j]': j \in \Jsetq\}$. Let $\Sol$
+denote the tuple $\Sol \equiv (i, \I, \C)$.
 
 #+name: eq:demorgan
 #+begin_export latex
@@ -567,11 +508,11 @@ said to be disjoint \cite{NaiveHalmos}. The inverse of a disjoint set can be fou
 
 **** Generator Output
 The output is a modified visit, noted as $\I_i'$. In actuality only the decision variables are being altered which is a
-subset of $\I_i$. Let this subset be defined by $x_i' \equiv (v_i, u_i, d_i) \subset \I_i$ which is the chosen queue,
-initial charge time, and detach time from the generator, $(v_i, u_i, d_i)$. The nature of SA implies that the generators
-have a sense of randomness. Because of that, some of the generators may have multiple choices for what $x_i'$ may be.
-Let the set of candidates for the output be defined as $x_i' \in X_i'$. Furthermore, set the set of candidate visits be
-denoted as $\I_i' \in \I'$.
+subset of $\I_i$. Let this subset be defined by $x_i' \equiv (v_i, u_i, d_i) \subset \I_i$ which is the chosen queue, initial
+charge time, and detach time from the generator, $(v_i, u_i, d_i)$. The nature of SA implies that the generators have a
+sense of randomness. Because of that, some of the generators may have multiple choices for what $x_i'$ may be. Let the
+set of candidates for the output be defined as $x_i' \in X_i'$. Furthermore, set the set of candidate visits be denoted as
+$\I_i' \in \I'$.
 
 *** Generators
 :PROPERTIES:
@@ -588,17 +529,17 @@ while others charge.
 :PROPERTIES:
 :CUSTOM_ID: new-visit
 :END:
-The new visit generator describes the process of moving bus $b$ from the idle queue, $v_i \in \{Q+1,..., Q+B\}$ to a
-valid charging queue, $v_i \in \{1,..., Q\}$. Lines 2-4 extracts the visit, $i$, arrival time, $a_i$, and departure
-time, $e_i$. Note that in subsequent algorithms these lines will be omitted for conciseness. Line 5 loops through the
-inactive time periods that contain the time the bus is at the station, $[a_i, e_i]$. Line 6 verifies that the inactive
-period selected is valid and returns a random charging time, $[u_i, d_i]$, if it is. Line 7 returns the new visit.
+The new visit generator describes the process of moving bus $b$ from the idle queue, $v_i \in \{Q+1,..., Q+B\}$ to a valid
+charging queue, $v_i \in \{1,..., Q\}$. Lines 2-4 extracts the visit, $i$, arrival time, $a_i$, and departure time, $e_i$.
+Note that in subsequent algorithms these lines will be omitted for conciseness. Line 5 loops through the inactive time
+periods that contain the time the bus is at the station, $[a_i, e_i]$. Line 6 verifies that the inactive period selected
+is valid and returns a random charging time, $[u_i, d_i]$, if it is. Line 7 returns the new visit.
 
 #+name: alg:new-visit
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:new-visit}
 \caption{New visit algorithm}
+\label{alg:new-visit}
     \LinesNumbered
     \TitleOfAlgo{New Visit}
     \KwIn{($\Sol$)}
@@ -625,24 +566,23 @@ period selected is valid and returns a random charging time, $[u_i, d_i]$, if it
 \end{algorithm}
 #+end_export
 
-The algorithm to find free time is defined in Algorithm [[alg:find-free-time]]. $L$ and $U$ are the lower and upper bound of
-the time between scheduled times. The possible use cases are depicted in [[fig:find-free]]. In each case depicted by
-[[fig:find-free]], the red line shows the arrival and departure time for an arbitrary bus visit, $i$. The blue lines
-indicate reigons in which charger $q$ is active. $C \in \C_q \subset \C$ represents one of the regions between the blue
-lines, $[L, U]$ which stand for the lower and upper portions of the regions, respectively. The output of Algorithm
-[[alg:find-free-time]] is a range for which the bus may be charged and the empty set if it cannot. As an example, consider a
-bus that is in the process of being scheduled and it encounters a situation similar to \autoref{subfig:egu}. That is,
-the only scheduling constraint is that the arrival time is before charger $q$ is available to charge the bus. Therefore,
-the bus must wait intil $L$ before changer $q$ may charge it. Furthermore, the range that $u_i$ must be selected from is
-$[L,e]$.
+The algorithm to find free time is defined in [[alg:find-free-time]]. $L$ and $U$ are the lower and upper bound of the time
+between scheduled times. The possible use cases are depicted in [[fig:find-free]]. In each case depicted by [[fig:find-free]],
+the red line shows the arrival and departure time for an arbitrary bus visit, $i$. The blue lines indicate reigons in
+which charger $q$ is active. $C \in \C_q \subset \C$ represents one of the regions between the blue lines, $[L, U]$ which stand
+for the lower and upper portions of the regions, respectively. The output of [[alg:find-free-time]] is a range for which the
+bus may be charged and the empty set if it cannot. As an example, consider a bus that is in the process of being
+scheduled and it encounters a situation similar to \autoref{subfig:egu}. That is, the only scheduling constraint is that
+the arrival time is before charger $q$ is available to charge the bus. Therefore, the bus must wait intil $L$ before
+changer $q$ may charge it. Furthermore, the range that $u_i$ must be selected from is $[L,e]$.
 
 #+include: "img/find-free.org"
 
 #+name: alg:find-free-time
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:find-free-time}
 \caption{Find free time algorithm searches and returns the available time frames}
+\label{alg:find-free-time}
     \LinesNumbered
     \TitleOfAlgo{Find Free Time}
     \KwIn{$(L,U,a,e)$}
@@ -694,8 +634,8 @@ verifies the time frame previously selected and returns a new charging time. Lin
 #+name: alg:slide-visit
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:slide-visit}
 \caption{Slide Visit Algorithm}
+\label{alg:slide-visit}
     \LinesNumbered
     \TitleOfAlgo{Slide Visit}
     \KwIn{$\Sol$}
@@ -727,8 +667,8 @@ bus is at the station, $[a_i, e_i]$. Line 3 verifies the selection and line 4 re
 #+name: alg:new-charger
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:new-charger}
 \caption{New Charger Algorithm}
+\label{alg:new-charger}
     \LinesNumbered
     \TitleOfAlgo{New Charger}
     \KwIn{$\Sol$}
@@ -759,8 +699,8 @@ The remove generator simply removes a bus from a charger queue and places it in 
 #+name:alg:remove
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:remove}
 \caption{Remove algorithm}
+\label{alg:remove}
     \LinesNumbered
     \TitleOfAlgo{Remove}
     \KwIn{$\Sol$}
@@ -783,8 +723,8 @@ meant that current scheduled tuple $(v_i, u_i, d_i)$ is removed and added back i
 #+name: alg:new-window
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:new-window}
 \caption{New window algorithm}
+\label{alg:new-window}
     \LinesNumbered
     \TitleOfAlgo{New Window}
     \KwIn{$\Sol$}
@@ -846,8 +786,8 @@ routes may be.
 #+name: alg:route-generation
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:route-generation}
 \caption{Route generation algorithm}
+\label{alg:route-generation}
     \LinesNumbered
     \TitleOfAlgo{RouteGeneration}
     \KwIn{$\M$}
@@ -893,15 +833,16 @@ routes may be.
 \end{algorithm}
 #+end_export
 
-The =Departure= algorithm is shown in Algorithm [[alg:departure-time]], and the =Feasible= method is used to determine if
+The =Departure= algorithm is shown in [[alg:departure-time]], and the =Feasible= method is used to determine if
 the generated schedule is valid (conditions covered in [[#sec:constraints]]). This is done to generate a schedule that is in
 the solution space.
 
 #+name: alg:departure-time
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:departure-time}
 \caption{Departure time algorithm}
+\label{alg:departure-time}
+
     \LinesNumbered
     \TitleOfAlgo{DepartureTime}
     \KwIn{(arrival-old, final-visit)}
@@ -935,8 +876,8 @@ in [[alg:schedule-generation]].
 #+name: alg:schedule-generation
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:schedule-generation}
 \caption{Schedule generation algorithm}
+\label{alg:schedule-generation}
     \LinesNumbered
     \TitleOfAlgo{ScheduleGeneration}
     \KwIn{$\I$, $\C$}
@@ -966,13 +907,14 @@ in [[alg:schedule-generation]].
 :END:
 As described in SA, local searches are also employed to try and exploit a given solution \cite{Radosavljevic2018-jc}.
 The method that will be employed to exploit the given solution is as follows: pick a bus, pick a visit, pick a
-generator. The algorithm is outlined in Algorithm [[alg:perturb-schedule]].
+generator. The algorithm is outlined in [[alg:perturb-schedule]].
 
 #+name: alg:perturb-schedule
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:perturb-schedule}
 \caption{Perturb schedule algorithm}
+\label{alg:perturb-schedule}
+
     \LinesNumbered
     \TitleOfAlgo{PerturbSchedule}
     \KwIn{$\I$, $\C$}
@@ -999,10 +941,10 @@ generator. The algorithm is outlined in Algorithm [[alg:perturb-schedule]].
 This final section combines the generation algorithms and the optimization problem into a single algorithm. It begins
 with an introduction to a general SA algorithm which will be used to springboard into the construction of the SA PAP
 algorithm. For the case of the pseudo SA algorithm to be presented, the notation pesented will be self-contained and not
-related to any of the variables presented for SA PAP thus far. Consider Algorithm [[alg:sa-pseudo]] \cite{Henderson}.
-$\omega$ and $\omega'$ are the current solution and the candidate solution, respectively. $t_k$ is the temperature
-cooling schedule, $T$ is the initial temperature that will iterate until $k = K$. $M_k$ is the repetition counter, it
-defines the number of iterations to execute for each temperture $t_k$.
+related to any of the variables presented for SA PAP thus far. Consider [[alg:sa-pseudo]] \cite{Henderson}. $\omega$
+and $\omega'$ are the current solution and the candidate solution, respectively. $t_k$ is the temperature cooling schedule,
+$T$ is the initial temperature that will iterate until $k = K$. $M_k$ is the repetition counter, it defines the number
+of iterations to execute for each temperture $t_k$.
 
 The algorithm behaves as follows: initialize the SA algorithm with an initial solution, temperature schedule, and
 repetition schedule. The first loops until $T = t_K$, the second loop finished whin $m = M_k$. For each loop, create a
@@ -1013,11 +955,13 @@ criteria is met.
 
 #+name: alg:sa-pseudo
 #+begin_export latex
-\begin{algorithm}
+\begin{algorithm}[H]
+\caption{Pseudo-code for SA}
 \label{alg:sa-pseudo}
+    \LinesNumbered
+    \TitleOfAlgo{SA Pseudo-Code}
 
     \SetKwFunction{f}{f}
-
     \Begin
     {
         Select an initial solution $\omega \in W$\;
@@ -1033,7 +977,7 @@ criteria is met.
             \While{$m = M_k$}
             {
                 Generate a new solution $\omega' \in N(\omega)$\;
-                Calculate $\Delta_{\omega,\omega'} \rightarrow \f{\omega'} - \f{\omega}$\;
+                Calculate $\Delta_{\omega,\omega'} \rightarrow$ \f{$\omega'$} - \f{$\omega$}\;
                 \If{$\Delta_{\omega , \omega'} \le 0$}{$\omega \rightarrow \omega'$}
                 \If{$\Delta_{\omega , \omega'} > 0$}{$\omega \rightarrow \omega'$ with probability $e^{\frac{-\Delta_{\omega , \omega'}}{t_k}}$}
                 $m \rightarrow m+1$\;
@@ -1045,7 +989,7 @@ criteria is met.
 \end{algorithm}
 #+end_export
 
-The objective now is to outline SA-PAP in Algorithm [[alg:sa-pap]]. Lines 2-4 initialize the SA algorithm by
+The objective now is to outline SA-PAP in [[alg:sa-pap]]. Lines 2-4 initialize the SA algorithm by
 defining the initial temperature, selecting the cooling schedule, and setting the repetition schedule. Line 5 loops
 through each of the step in the temperature schedule $\Tau \in \{ \Tau_0, \Tau_1, ..., \Tau_m \}$. Lines 6 and 7
 generate a new solution and calculates its fitness. $\nu$ in this context is defined as $\nu = (u, d, v, \et)$ Lines 8
@@ -1056,8 +1000,8 @@ solution, calculates its fitness, and updates the current solution with the cand
 #+name: alg:sa-pap
 #+begin_export latex
 \begin{algorithm}[H]
-\label{alg:sa-pap}
 \caption{Simulated annealing approach to the position allocation problem}
+\label{alg:sa-pap}
     \LinesNumbered
     \TitleOfAlgo{SA PAP}
     \KwIn{$\I$}
